enable multiple ComponentFactory